--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <img src="gallery-landing-temp.jpg" alt="">
         <div class="landing-text">
             <h1>2022 Modern Art Exhibit</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aspernatur quo cupiditate laborum ad porro? Necessitatibus aperiam tempore corporis veniam quis, nam rem pariatur illum. Voluptate repudiandae accusantium harum a?</p>
-            <a href="exhibit1.html">Enter</a>
+            <a class="enter-button" href="welcome.html">Enter</a>
         </div>
     </div>
 </body>
