--- a/exhibit1.html
+++ b/exhibit1.html
@@ -38,6 +38,7 @@
         <div class="grid-item grid-item--height2"></div>
     </div>
     
+    <script src="jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
     <script>
         $('.grid').masonry({
