--- a/exhibit1.html
+++ b/exhibit1.html
@@ -40,14 +40,7 @@
     
     <script src="jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
-    <script>
-        $('.grid').masonry({
-            itemSelector: '.grid-item',
-            columnWidth: 160,
-            gutter: 20
-        });
-
-    </script>
+    <script src = "main.js"></script>
 </body>
 
 </html>
