--- a/exhibit1.html
+++ b/exhibit1.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Masonry - gutter, margin bottom</h1>
-
+    <!-- test commit -->
     <div class="grid">
         <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag"></div>
         <div class="grid-item grid-item--width2 grid-item--height2"></div>
