--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3fc989d595.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
     <title>Exhibit1</title>
 </head>
@@ -14,8 +15,13 @@
         <img src="gallery-landing-temp.jpg" alt="">
         <div class="landing-text">
             <h1>Welcome</h1>
-            <p>This exhibit Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nihil consequuntur saepe laboriosam, debitis similique obcaecati a ullam accusamus blanditiis deserunt inventore corporis delectus et nemo odit aspernatur repellat ea!</p>
+            <p>This exhibit Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nihil consequuntur saepe
+                laboriosam, debitis similique obcaecati a ullam accusamus blanditiis deserunt inventore corporis
+                delectus et nemo odit aspernatur repellat ea!</p>
         </div>
+        <a href="exhibit1.html">
+            <i class="fas fa-chevron-right"></i>
+        </a>
     </div>
 </body>
 
