add modal close button

--- a/exhibit1.html
+++ b/exhibit1.html
@@ -41,6 +41,7 @@
     <div class = "modal hidden">
         <div class = "modal-overlay">
             <div class = "modal-container">
+                <button class = "modal-close">x</button>
                 <h1 class = "modal-title"></h1>
                 <div class = "modal-content">
 
