center exhibit content

--- a/exhibit1.html
+++ b/exhibit1.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Masonry - gutter, margin bottom</h1>
+    <h1 class="period-header">Masonry - gutter, margin bottom</h1>
     <!-- test commit -->
     <div class="grid">
         <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag"></div>
