--- a/exhibit1.html
+++ b/exhibit1.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="exhibit.css">
     <title>Exhibit1</title>
 </head>
 
-<body>
+<body style = "background-image: url(https://cdn.pixabay.com/photo/2017/09/10/08/52/pattern-2734775_960_720.jpg);">
     <h1 class="period-header">Masonry - gutter, margin bottom</h1>
     <!-- test commit -->
     <div class="grid">
