add images to exhibit

--- a/exhibit1.html
+++ b/exhibit1.html
@@ -14,30 +14,38 @@
     <!-- test commit -->
     <div class="grid">
         <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-            <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/1200px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg">
+            <img src = "paintings/romance/Liberty_Leading_the_People_Eugene_Delacroix.jpg">
         </div>
-        <div class="grid-item grid-item--width2 grid-item--height2"></div>
-        <div class="grid-item grid-item--height3"></div>
-        <div class="grid-item grid-item--height2"></div>
-        <div class="grid-item grid-item--width3"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--height2"></div>
-        <div class="grid-item grid-item--width2 grid-item--height3"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--height2"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--width2 grid-item--height2"></div>
-        <div class="grid-item grid-item--width2"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--height2"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--height3"></div>
-        <div class="grid-item grid-item--height2"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item grid-item--height2"></div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/Newton_William_Blake.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/Saturn_Devouring_his_Son_Francisco_Goya.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Fighting_Temeraire_JMW_Turner.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Hay_Wain_John_Constable.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Kiss_Francesco_Hayez.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Ninth_Wave_Ivan_Aivazovsky.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Oxbow_Thomas_Cole.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Raft_of_the_Medusa_Theodore_Gericault.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/The_Third_of_May_1808_Francisco_Goya.jpg">
+        </div>
+        <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <img src = "paintings/romance/Wanderer_above_the_Sea_of_Fog_Caspar_David_Friedrich.jpg">
+        </div>
     </div>
     
     <div class = "modal hidden">
