fix horiz scroll

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
         $(function () {
             $("#welcomePage").load("welcome.html");
-            $("#exhibit1").load("exhibit1.html");''
+            $("#exhibit1").load("exhibit1.html");
         });
     </script>
     <link rel="stylesheet" href="main.css">
