--- a/exhibit1.html
+++ b/exhibit1.html
@@ -38,37 +38,37 @@
         <div id = "main">
             <div class="grid">
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/Liberty_Leading_the_People_Eugene_Delacroix.jpg">
+                <img src = "paintings/romance/Liberty_Leading_the_People.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/Newton_William_Blake.jpg">
+                <img src = "paintings/romance/Newton.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/Saturn_Devouring_his_Son_Francisco_Goya.jpg">
+                <img src = "paintings/romance/Saturn_Devouring_his_Son.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Fighting_Temeraire_JMW_Turner.jpg">
+                <img src = "paintings/romance/The_Fighting_Temeraire.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Hay_Wain_John_Constable.jpg">
+                <img src = "paintings/romance/The_Hay_Wain.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Kiss_Francesco_Hayez.jpg">
+                <img src = "paintings/romance/The_Kiss.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Ninth_Wave_Ivan_Aivazovsky.jpg">
+                <img src = "paintings/romance/The_Ninth_Wave.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Oxbow_Thomas_Cole.jpg">
+                <img src = "paintings/romance/The_Oxbow.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Raft_of_the_Medusa_Theodore_Gericault.jpg">
+                <img src = "paintings/romance/The_Raft_of_Medusa.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/The_Third_of_May_1808_Francisco_Goya.jpg">
+                <img src = "paintings/romance/The_Third_of_May_1808.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/romance/Wanderer_above_the_Sea_of_Fog_Caspar_David_Friedrich.jpg">
+                <img src = "paintings/romance/Wanderer_above_the_Sea_of_Fog.png">
             </div>
         </div>
         
