fix exhibit on horiz scroll

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         $(function () {
             $("#welcomePage").load("welcome.html");
             $("#exhibit1").load("exhibit1.html");
+            $("#endcard").load("endcard.html");
         });
     </script>
     <link rel="stylesheet" href="main.css">
@@ -28,6 +29,8 @@
         </div>
         <div id="welcomePage" class="tile"></div>
         <div id="exhibit1" class="tile"></div>
+        <!-- <iframe src="exhibit1.html" style="width: 100vw !important;" frameborder="0"></iframe> -->
+        <div id="endcard" class="tile"></div>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
