--- a/endcard.html
+++ b/endcard.html
@@ -1,28 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/3fc989d595.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main.css">
-    <title>Exhibit1</title>
-</head>
-
-<body>
-    <div class="full-screen-page">
-        <img src="gallery-landing-temp.jpg" alt="">
-        <div class="center-text">
-            <h1>Welcome</h1>
-            <p>This exhibit Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nihil consequuntur saepe
-                laboriosam, debitis similique obcaecati a ullam accusamus blanditiis deserunt inventore corporis
-                delectus et nemo odit aspernatur repellat ea!</p>
-        </div>
-        <!-- <a href="exhibit1.html">
-            <i class="fas fa-chevron-right"></i>
-        </a> -->
+<div class="full-screen-page">
+    <img src="gallery-landing-temp.jpg" alt="">
+    <div class="center-text">
+        <h1>Thanks for visiting</h1>
     </div>
-</body>
+</div>
 
-</html>
+<div class="meet-artists">
+    <div class="right">
+
+        <h1>Meet the Artists</h1>
+        <p>We're hosting breakout artists Ada, Beck, and Carter on March 6th over zoom. Join us!</p>
+    </div>
+    <div class="left">
+        <img src="paintings/frames/rect-frame.png" alt="">
+        <img src="paintings/frames/rect-frame.png" alt="">
+        <img src="paintings/frames/rect-frame.png" alt="">
+    </div>
+</div>
