--- a/exhibit1.html
+++ b/exhibit1.html
@@ -9,30 +9,10 @@
     <title>Exhibit1</title>
 </head>
 
-<body style="background-image: url(https://cdn.pixabay.com/photo/2016/09/05/15/07/concrete-1646788_960_720.jpg);">
+<div style="background-image: url(https://cdn.pixabay.com/photo/2016/09/05/15/07/concrete-1646788_960_720.jpg);">
     <div id = "nav-bar">
         <h1 class="period-header">THE ROMANCE ERA
-            <span id = "nav-arrows">
-                <a id = "nav-left">
-                    <svg viewBox="197.467 84.359 173.207 277.131" xmlns="http://www.w3.org/2000/svg">
-                        <g id="directional" stroke="none" stroke-width="1" fill-rule="evenodd" transform="matrix(0, -17.320698, -17.320698, 0, 491.918793, 430.772614)" style="">
-                          <g id="arrow-up">
-                            <polygon id="Shape" points="4 15 12 7 20 15 18 17 12 11 6 17"/>
-                          </g>
-                        </g>
-                      </svg>
-                </a>
-                <a id ="nav-right">
-                    <svg viewBox="197.467 84.359 173.207 277.131" xmlns="http://www.w3.org/2000/svg">
-                      <g id="directional" stroke="none" stroke-width="1" fill-rule="evenodd" transform="matrix(0, 17.320698, 17.320698, 0, 76.222046, 15.075867)" style="">
-                        <g id="arrow-up">
-                          <polygon id="Shape" points="4 15 12 7 20 15 18 17 12 11 6 17"/>
-                        </g>
-                      </g>
-                    </svg>
-                </a>
-                
-            </span>
+            
         </h1>
     </div>
         <div id = "main">
@@ -87,9 +67,8 @@
             </div>
         </div>
     </div>
-    <script src="jquery-3.6.0.min.js"></script>
     <script src = "masonry.pkgd.min.js"></script>
     <script src = "main.js"></script>
-</body>
+</div>
 
 </html>
