--- a/endcard.html
+++ b/endcard.html
@@ -1,6 +1,6 @@
 
 <div class="full-screen-page">
-    <img src="gallery-landing-temp.jpg" alt="">
+    <img src="sound-space.jpg" alt="">
     <div class="center-text">
         <h1>Thanks for visiting</h1>
     </div>
@@ -13,8 +13,8 @@
         <p>We're hosting breakout artists Ada, Beck, and Carter on March 6th over zoom. Join us!</p>
     </div>
     <div class="left">
-        <img src="paintings/frames/rect-frame.png" alt="">
-        <img src="paintings/frames/rect-frame.png" alt="">
-        <img src="paintings/frames/rect-frame.png" alt="">
+        <img src="woman.png" alt="">
+        <img src="man.png" alt="">
+        <img src="person.png" alt="">
     </div>
 </div>
