--- a/index.html
+++ b/index.html
@@ -9,27 +9,37 @@
     <script>
         $(function () {
             $("#welcomePage").load("welcome.html");
-            $("#exhibit1").load("exhibit1.html");
+            $("#romance").load("romance.html");
+            $("#renaissance").load("renaissance.html");
+            $("#modern").load("modern.html");
+            $("#medieval").load("medieval.html");
+            $("#ancient").load("ancient.html");
             $("#endcard").load("endcard.html");
         });
     </script>
     <link rel="stylesheet" href="main.css">
-    <title>2022 Modern Art Exhibit</title>
+    <title>Through the Ages Art Exhibit</title>
 </head>
 
 <body>
     <div class="container">
 
-        <div class="full-screen-page tile">
-            <img src="gallery-landing-temp.jpg" alt="">
+        <div class="full-screen-page tile landing">
+            <img src="blank-museum.jpg" alt="">
             <div class="center-text">
-                <h1>2022 Modern Art Exhibit</h1>
-                <a class="enter-button" href="welcome.html">Enter</a>
+                <h1>THROUGH<br> THE <br>AGES</h1>
+                <p>Art Exhibit</p>
             </div>
         </div>
         <div id="welcomePage" class="tile"></div>
-        <div id="exhibit1" class="tile"></div>
+        <div id="ancient" class="tile"></div>
+        <!-- <div id="medieval" class="tile"></div> -->
+        <div id="romance" class="tile"></div>
+        <!-- <div id="renaissance" class="tile"></div> -->
+        <!-- <div id="modern" class="tile"></div> -->
+
         <!-- <iframe src="exhibit1.html" style="width: 100vw !important;" frameborder="0"></iframe> -->
+        <!-- <div id="modern3d1" class="tile"></div> -->
         <div id="endcard" class="tile"></div>
 
     </div>
