--- a/welcome.html
+++ b/welcome.html
@@ -12,12 +12,10 @@
 
 <body>
     <div class="full-screen-page">
-        <img src="gallery-landing-temp.jpg" alt="">
+        <img src="welcome-screen.jpg" alt="">
         <div class="center-text">
             <h1>Welcome</h1>
-            <p>This exhibit Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nihil consequuntur saepe
-                laboriosam, debitis similique obcaecati a ullam accusamus blanditiis deserunt inventore corporis
-                delectus et nemo odit aspernatur repellat ea!</p>
+            <p>Keep scrolling to view art throughout the ages.</p>
         </div>
         <!-- <a href="exhibit1.html">
             <i class="fas fa-chevron-right"></i>
