--- a/welcome.html
+++ b/welcome.html
@@ -5,21 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/3fc989d595.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="main.css">
+    <!-- <script src="https://kit.fontawesome.com/3fc989d595.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="styles/main.css">
     <title>Exhibit1</title>
 </head>
 
 <body>
     <div class="full-screen-page">
-        <img src="welcome-screen.jpg" alt="">
+        <img src="paintings/welcome-screen.jpg" alt="">
         <div class="center-text">
             <h1>Welcome</h1>
             <p>Keep scrolling to view art throughout the ages.</p>
         </div>
-        <!-- <a href="exhibit1.html">
-            <i class="fas fa-chevron-right"></i>
-        </a> -->
     </div>
 </body>
 
