--- a/romance.html
+++ b/romance.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="exhibit.css">
+    <link rel="stylesheet" href="styles/exhibit.css">
     <title>Exhibit1</title>
 </head>
 
-<div style="background-image: url(exhibit-wall.jpg);">
+<div style="background-image: url(paintings/exhibit-wall.jpg);">
     <div id = "nav-bar">
         <h1 class="period-header">THE ROMANCE ERA
             
@@ -67,8 +67,8 @@
             </div>
         </div>
     </div>
-    <script src = "masonry.pkgd.min.js"></script>
-    <script src = "main.js"></script>
+    <script src = "js/masonry.pkgd.min.js"></script>
+    <script src = "js/main.js"></script>
 </div>
 
 </html>
