--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div id="ancient" class="tile"></div>
         <!-- <div id="medieval" class="tile"></div> -->
         <div id="romance" class="tile"></div>
-        <!-- <div id="renaissance" class="tile"></div> -->
-        <!-- <div id="modern" class="tile"></div> -->
+        <div id="renaissance" class="tile"></div>
+        <div id="modern" class="tile"></div>
 
         <!-- <iframe src="exhibit1.html" style="width: 100vw !important;" frameborder="0"></iframe> -->
         <!-- <div id="spaceGlobe" class="tile"></div> -->
@@ -57,7 +57,9 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/gsap.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
