--- a/romance.html
+++ b/romance.html
@@ -9,7 +9,7 @@
     <title>Exhibit1</title>
 </head>
 
-<div style="background-image: url(paintings/exhibit-wall.jpg);">
+<div class="wall romance">
     <div id = "nav-bar">
         <h1 class="period-header">THE ROMANCE ERA
             
@@ -41,7 +41,7 @@
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Oxbow.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <!-- <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Raft_of_Medusa.png">
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
@@ -49,7 +49,7 @@
             </div>
             <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/Wanderer_above_the_Sea_of_Fog.png">
-            </div>
+            </div> -->
         </div>
         
         <div class = "modal hidden">
@@ -67,8 +67,8 @@
             </div>
         </div>
     </div>
-    <script src = "js/masonry.pkgd.min.js"></script>
-    <script src = "js/main.js"></script>
+    <!-- <script src = "js/masonry.pkgd.min.js"></script> -->
+    <!-- <script src = "js/main.js"></script> -->
 </div>
 
 </html>
