--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             $("#ancient").load("ancient.html");
             // $("#spaceGlobe").load("space-globe.html");
             $("#endcard").load("endcard.html");
+            $.getScript("js/main.js");
         });
     </script>
     <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
