--- a/more-info.html
+++ b/more-info.html
@@ -25,7 +25,7 @@
     <div class="more-info">
         <h1>
             <a href="index.html">
-                Throughout The Ages
+                Through The Ages
             </a>
         </h1>
         <div class="meet-artists">
