--- a/medieval.html
+++ b/medieval.html
@@ -12,7 +12,7 @@
 <div class="wall medieval">
     <div id = "nav-bar">
         <h1 class="period-header">THE MEDIEVAL ERA
-            
+            <a class = "audiobutton" soundfile="sounds/Medieval.mp3">Play Audio</a>
         </h1>
     </div>
         <div id = "main">
