--- a/ancient.html
+++ b/ancient.html
@@ -13,7 +13,7 @@
 
     <div id="nav-bar">
         <h1 class="period-header">THE ANCIENT ERA
-
+            <a class = "audiobutton" soundfile="sounds/Ancient.mp3">Play Audio</a>
         </h1>
     </div>
     <div id="main">
@@ -79,6 +79,7 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
 </div>
