--- a/modern.html
+++ b/modern.html
@@ -13,6 +13,7 @@
 
     <div id="nav-bar">
         <h1 class="period-header">THE MODERN ERA
+            <a class = "audiobutton" soundfile="sounds/Modern.mp3">Play Audio</a>
 
         </h1>
     </div>
