--- a/renaissance.html
+++ b/renaissance.html
@@ -13,6 +13,7 @@
 
     <div id="nav-bar">
         <h1 class="period-header">THE RENAISSANCE ERA
+            <a class = "audiobutton" soundfile="sounds/Renaissance.mp3">Play Audio</a>
 
         </h1>
     </div>
