--- a/romance.html
+++ b/romance.html
@@ -12,7 +12,8 @@
 <div class="wall romance">
     <div id = "nav-bar">
         <h1 class="period-header">THE ROMANCE ERA
-            
+            <a class = "audiobutton" soundfile="sounds/Romance.mp3">Play Audio</a>
+
         </h1>
     </div>
         <div id = "main">
