fix order and add medeival

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <div id="welcomePage" class="tile"></div>
         <div id="ancient" class="tile"></div>
-        <!-- <div id="medieval" class="tile"></div> -->
-        <div id="romance" class="tile"></div>
+        <div id="medieval" class="tile"></div>
         <div id="renaissance" class="tile"></div>
+        <div id="romance" class="tile"></div>
         <div id="modern" class="tile"></div>
         <div id="digital" class=" tile">
             <div class="full-screen-page"></div>
