add responsive features

--- a/ancient.html
+++ b/ancient.html
@@ -10,11 +10,8 @@
 </head>
 
 <div class="wall ancient">
-
     <div id="nav-bar">
-        <h1 class="period-header">THE ANCIENT ERA
-
-        </h1>
+        <h1 class="period-header">THE ANCIENT ERA</h1>
     </div>
     <div id="main">
         <div class="grid">
@@ -79,7 +76,6 @@
             </div>
         </div>
     </div>
-    <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
 </div>
 
