--- a/medieval.html
+++ b/medieval.html
@@ -43,6 +43,7 @@
             </div>
 
         </div>
+            <script src="js/jquery-3.6.0.min.js"></script>
 
         <div class="modal hidden">
             <div class="modal-overlay">
@@ -57,8 +58,10 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+
     <!-- <script src = "js/masonry.pkgd.min.js"></script> -->
-    <!-- <script src = "js/main.js"></script> -->
+    <script src = "js/main.js"></script>
 </div>
 
 </html>
