--- a/romance.html
+++ b/romance.html
@@ -68,8 +68,10 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+
     <!-- <script src = "js/masonry.pkgd.min.js"></script> -->
-    <!-- <script src = "js/main.js"></script> -->
+    <script src = "js/main.js"></script>
 </div>
 
 </html>
