--- a/ancient.html
+++ b/ancient.html
@@ -78,6 +78,8 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+
     <script src="js/main.js"></script>
 </div>
 
