--- a/renaissance.html
+++ b/renaissance.html
@@ -76,6 +76,8 @@
             </div>
         </div>
     </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
 </div>
