add more welcome info

--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,7 @@
         <img src="paintings/welcome-screen.jpg" alt="">
         <div class="center-text">
             <h1>Welcome</h1>
-            <p>Keep scrolling to view art throughout the ages.</p>
+            <p>Keep scrolling to view art throughout the ages. <br> Click on any piece to view more info. <br> Feel fre to follow our audio tour with the buttons at the top right of each exhibit.</p>
         </div>
     </div>
 </body>
